--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.11.0",
     "install": "^0.13.0",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
